# garagem

./: .pdm-python  README.md  pyproject.toml
config/: settings.py
garagem/: admin.py  models.py
garagem/migrations/: 0001_initial.py  0002_acessorio_cor_marca_modelo_veiculo.py
