[project]
name = "garagem"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "isabellirosa", email = "isabelli.ifc@gmail.com"},
]
dependencies = [
    "django>=5.0.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
